with sign-up,sign-in ONLY html pages

--- a/basic home page/home.html
+++ b/basic home page/home.html
@@ -51,8 +51,8 @@
               <a class="nav-link" href="#">Customize Your Pizza</a>
             </li>
           </ul>
-          <button type="button" class="d-none d-sm-inline-block btn btn-outline-light btn-lg ml-lg-60 mr-40 mr-lg-0 order-2 order-lg-3 cs-btn"><i class="fa fa-shopping-cart"></i> Cart</button>
-          <button type="button" class="d-none d-sm-inline-block btn btn-dark btn-lg ml-lg-60 mr-40 mr-lg-0 order-2 order-lg-3 cs-btn"><i class="fa fa-sign-in"></i> Sign-in</button>
+          <a style="margin-right: 20px; margin-left: 15px;" href=""><button type="button" class="d-none d-sm-inline-block btn btn-outline-light btn-lg ml-lg-60 mr-40 mr-lg-0 order-2 order-lg-3 cs-btn"><i class="fa fa-shopping-cart"></i> Cart</button></a>
+          <a href="sign_up.html"><button type="button" class="d-none d-sm-inline-block btn btn-dark btn-lg ml-lg-60 mr-40 mr-lg-0 order-2 order-lg-3 cs-btn"><i class="fa fa-sign-in"></i> Sign-Up</button></a>
         </div>
       </nav>
     </div>
